2007-07-03  Claude Paroz  <claude@2xlibre.net>

	* update-stats.py: Added a check for empty result in
	check_po_contains_errors_in_db, extended search for ALL_LINGUAS
	(especially for gnumeric).

2007-07-03  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Updated Uzbek team web page.
	* update-stats.py: New check_po_contains_errors_in_db function, to
	always recompute a po file that contains errors.

2007-06-27  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Uzbek team leader.

2007-06-24  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gedit branched for 2.18.

2007-06-23  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Percentage floored instead of rounded.
	* teams.py: Sort release list.

2007-06-22  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Modified information for Lao team.

2007-06-22  Claude Paroz  <claude@2xlibre.net>

	* modules.py: Fixed hg and git support. Patch by Dimitris Glezos
	<dimitris@glezos.com>. Fixes bug #449924.

2007-06-18  Claude Paroz  <claude@2xlibre.net>

	* data/main.css:
	* templates/list-languages.tmpl: Show language list on 3 cols. Idea
	borrowed from Dimitris :)

2007-06-18  Claude Paroz  <claude@2xlibre.net>

	* data.py: Fixed copy of default dict structure.
	* gnome-modules.xml.in:
	* releases.py:
	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-module-xml.tmpl:
	* templates/language-release-ui-stats-modules.tmpl:
	* templates/module.tmpl:
	* update-stats.py: Replaced svn... and cvs... tags by a more generic
	scm... serie of tags.
	* modules.py: Added support for git and mercurial as source
	control manager. Patch by Dimitris Glezos <dimitris@glezos.com>. Fixes
	bug #448168.

2007-06-16  Claude Paroz  <claude@2xlibre.net>

	* view-module.py: Add timezone info for updated time of po and pot
	files. Fixes bug #122870.

2007-06-16  Claude Paroz  <claude@2xlibre.net>
