@@ -5,6 +5,7 @@ people.xml.in
 releases.xml.in
 teams.py
 translation-teams.xml.in
+update-stats.py
 templates/index.tmpl
 templates/show-stats.tmpl
 templates/person.tmpl
