@@ -1,3 +1,8 @@
+2007-07-06  Claude Paroz  <claude@2xlibre.net>
+
+	* POTFILES.in: Added update-stats.py (error messages)
+	* fr.po: Updated French translation.
+
 2007-07-03  Luca Ferretti  <elle.uca@libero.it>
 
 	* LINGUAS:
